--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: fastapi
         image: obsrv_api-api:latest
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8000
         env:
